--- a/style.css
+++ b/style.css
@@ -44,6 +44,13 @@ nav {
     z-index: 1000;
     overflow: hidden;
     font-family: Arial, sans-serif;
+    /* added */
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    transition: top 0.3s; /* Smooth transition for hiding/showing */
+
+
 }
 
 
@@ -52,9 +59,16 @@ nav a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 20px;
+    padding: 20px 20px;
     text-decoration: none;
 }
+
+/* Add a class for the scrolled state */
+nav.scrolled {
+    background-color:#ffffff ; /* Slightly transparent background */
+}
+
+
 
 nav a:hover {
     background-color: #ddd;
@@ -108,23 +122,76 @@ nav a:hover {
     display: block;
 }
 
-/* search bar */
+/* Initial styles for the search bar container */
+.search-bar {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 50px;
+    margin: 10px;
+}
+
+/* Initially hide the search container */
+.search-container {
+    display: none; /* Hidden by default */
+    align-items: center;
+    width: 80%;
+    transition: width 0.3s ease, opacity 0.3s ease;
+}
+
+/* Hide the search icon when the search container is active */
+.search-bar.active #searchIcon {
+    display: none; /* Hide icon when the search bar is active */
+}
+
 #searchInput {
-    float: right;
-    padding: 7px;
-    margin-top: 6px;
-    margin-right: 16px;
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 100%;
+}
+
+#searchIcon {
+    background: none;
     border: none;
-    font-size: 17px;
+    cursor: pointer;
+    padding: 10px;
+    margin-left: 10px;
+}
+
+#searchIcon img {
+    width: 34px;
+    height: 34px;
+}
+
+/* Show the search container when active */
+.search-container.active {
+    display: flex; /* Show the search container */
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .search-container {
+        width: 90%;
+    }
+}
+
+@media (max-width: 480px) {
+    .search-container {
+        width: 95%;
+    }
 }
 
 
 .products-grid {
     display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-    padding: 40px;
-    background-color: #f4f4f4;
+    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
+    gap: 10px;
+    padding: 5px;
+    /* background-color: #62c0f3; */
 }
 
 .product {
@@ -137,7 +204,7 @@ nav a:hover {
 }
 
 .product:hover {
-    transform: translateY(-5px);
+    transform: translateY(-8px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -181,4 +248,6 @@ button:hover {
     background-color: #555;
 }
 
-
+footer{
+    text-align: center;
+}
