--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 
 header {
-    background-color: #333;
+    background-color: #69afd7;
     color: white;
     padding: 15px ;
     text-align: center;
